tests/snapshots/snapshots__ppt__pres.ppt.snap
---
source: tests/snapshots.rs
expression: output
---
<!-- anydoc:source-unit-start kind=slide ordinal=1 status=parsed -->

Deck Title Slide

- Top level point

  - Nested detail

- Second point with emphasis

> Speaker note for the intro slide.

<!-- anydoc:source-unit-end kind=slide ordinal=1 status=parsed -->

<!-- anydoc:source-unit-start kind=slide ordinal=2 status=parsed -->

Numbers Slide

Region

Total

North

42

Grouped shapes below.

Inside a group shape.

> Second slide notes mention the table.

<!-- anydoc:source-unit-end kind=slide ordinal=2 status=parsed -->
